--- a/docs/source/_static/css/custom.css
+++ b/docs/source/_static/css/custom.css
@@ -1,6 +1,6 @@
 
 html[data-theme=dark] {
-    --pst-color-primary: #03A062;
+    --pst-color-primary: #04B46D;
     --pst-color-link: var(--pst-color-primary);
   }
   
