Add first footer version

--- a/docs/source/_static/css/custom.css
+++ b/docs/source/_static/css/custom.css
@@ -4,8 +4,11 @@ html[data-theme=dark] {
     --pst-color-link: var(--pst-color-primary);
   }
   
-  html[data-theme=light] {
-    --pst-color-primary: #03A062;
-    --pst-color-link: var(--pst-color-primary);
-  }
-  
+html[data-theme=light] {
+  --pst-color-primary: #03A062;
+  --pst-color-link: var(--pst-color-primary);
+}
+
+.footer-item {
+  display: inline-block;
+}
