--- a/docs/source/_static/css/custom.css
+++ b/docs/source/_static/css/custom.css
@@ -9,28 +9,21 @@ html[data-theme=light] {
   --pst-color-link: var(--pst-color-primary);
 }
 
-.row {
-  display: flex;
-  flex-wrap: wrap;
-  margin-right: -15px;
-  margin-left: -15px;
-}
-
-.container{
-  padding-bottom: 0.5rem!important;
-  padding-top: 0.5rem!important;
-  max-width: 720px;
-}
-
 .col {
   flex: 0 0 50%;
   max-width: 50%;
 }
 
 .img-sponsor {
-  height: 100px;
+  height: 50px;
   padding-top: 5px;
   padding-right: 5px;
   padding-bottom: 5px;
   padding-left: 5px;
+}
+
+.things-in-a-row {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
