New about section (#29)
* Add about page draft

* Remove address and email, add GCNU

* Match wording on homepage

* Add funding logos

* Update email link

* Add logos for dark and light

* enlarge funder logos

* Add higher quality wellcome logos

* remove extra wellcome logo

Co-authored-by: Adam Tyson <code@adamltyson.com>

--- a/docs/source/_static/css/custom.css
+++ b/docs/source/_static/css/custom.css
@@ -8,6 +8,14 @@ html[data-theme=light] {
   --pst-color-link: var(--pst-color-primary);
 }
 
+.sponsor {
+  height: 100px;
+  padding-top: 5px;
+  padding-right: 5px;
+  padding-bottom: 5px;
+  padding-left: 5px;
+}
+
 .col {
   flex: 0 0 50%;
   max-width: 50%;
@@ -19,6 +27,11 @@ html[data-theme=light] {
   padding-right: 5px;
   padding-bottom: 5px;
   padding-left: 5px;
+}
+
+.things-in-a-row-sponsor {
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .things-in-a-row {
