--- a/docs/source/_static/css/custom.css
+++ b/docs/source/_static/css/custom.css
@@ -37,7 +37,7 @@ html[data-theme=dark] .bd-main img {
 .bd-article img, 
 .bd-content img {
   display: block;
-  margin: 1rem auto;
+  /* margin: 1rem auto; */
   max-width: 100%;
   height: auto;
 }
