--- a/docs/source/_static/css/custom.css
+++ b/docs/source/_static/css/custom.css
@@ -41,8 +41,8 @@ html[data-theme=dark] .bd-main img {
   height: auto;
 }
 
-.sponsor {
-  height: 100px;
+.bd-article .sponsor {
+  height: 50px;
   padding-top: 5px;
   padding-right: 5px;
   padding-bottom: 5px;
