Fixed sponsor logo sizing inconsistency on About page - #192 (#216)
* Adjust sponsor image styling in docs CSS

Reduced the height of sponsor images from 100px to 50px and scoped the style to .bd-article .sponsor for improved layout consistency.

Signed-off-by: parth <parth.bhanushali241@sakec.ac.in>

"Fix sponsor logo sizing inconsistency on About page"

* ui: update layout as per review comments

Signed-off-by: parth <parth.bhanushali241@sakec.ac.in>

---------

Signed-off-by: parth <parth.bhanushali241@sakec.ac.in>

--- a/docs/source/_static/css/custom.css
+++ b/docs/source/_static/css/custom.css
@@ -41,7 +41,7 @@ html[data-theme=dark] .bd-main img {
   height: auto;
 }
 
-.sponsor {
+.bd-article .sponsor {
   height: 100px;
   padding-top: 5px;
   padding-right: 5px;
